Add final report and update docs, UML, data
Prepare repository for final delivery: add documentacion/informe_final.md and update README with repo link and clearer JavaFX/console run instructions. Revise documentation files (commits_individuales, cumplimiento, escenarios_de_prueba, tareas_por_integrante) to clarify checklist, test scenarios and contributor responsibilities; include compilation/verifications and example outputs. Update UML PlantUML diagrams (casos_de_uso.puml, diagrama_clases.puml) to reflect current use cases and class structure. Clean up IDE workspace metadata and simplify eBarrio/src/data/datos.json sample data to match the delivered state.