@@ -1,30 +1,108 @@
-# Escenarios de prueba manuales
+# Escenarios de prueba
 
-## Escenario 1: demo general por consola
+## Preparacion
 
-1. Ejecutar `Main`.
-2. Verificar que se cree el barrio con viviendas y residentes.
-3. Verificar que se registre un administrador como observador.
-4. Verificar que se creen un reclamo, una tarea de mantenimiento y un incidente.
-5. Verificar que se listen las solicitudes.
-6. Verificar que el reclamo avance hasta Cerrado.
-7. Verificar que una tarea pueda cancelarse desde Asignado.
-8. Verificar que se registre ingreso y egreso de visitantes.
+Compilar desde la raiz del repositorio:
 
-Resultado esperado: la consola muestra los cambios de estado, las notificaciones y los
-listados finales sin errores de ejecucion.
-
-Comando sugerido:
-
-```powershell
-java -cp out Main
+```bash
+javac --module-path eBarrio/libs/javafx-sdk-17.0.19/lib --add-modules javafx.controls -encoding UTF-8 -d out $(find eBarrio/src -name '*.java')
 ```
 
-## Escenario 2: ciclo de vida de reclamo
+Ejecutar interfaz:
 
-1. Ejecutar `model.solicitud.test.TestReclamo`.
-2. Crear un reclamo en estado Pendiente.
-3. Avanzar el estado varias veces.
+```bash
+java --module-path eBarrio/libs/javafx-sdk-17.0.19/lib --add-modules javafx.controls -cp out app.MainApp
+```
+
+Usuarios de prueba:
+
+- Administrador: `admin@ebarrio.com` / `admin123`
+- Residente: `sofia@email.com` / `sofia123`
+- Residente: `martin@email.com` / `martin123`
+- Residente: `ana@email.com` / `ana123`
+- Residente: `facu@gmail.com` / `34567891`
+
+## Escenario 1: login por rol
+
+Pasos:
+
+1. Ejecutar `app.MainApp`.
+2. Iniciar sesion con `admin@ebarrio.com` / `admin123`.
+3. Verificar que se muestra la vista de administrador.
+4. Cerrar y volver a iniciar sesion con `sofia@email.com` / `sofia123`.
+5. Verificar que se muestra la vista de residente.
+
+Resultado esperado: cada usuario ingresa a la vista correspondiente. Si la clave es
+incorrecta, la app muestra un mensaje amigable: `Ingresa bien el email y la clave para
+continuar.`
+
+## Escenario 2: alta de residente con cuenta automatica
+
+Pasos:
+
+1. Iniciar sesion como administrador.
+2. Entrar en Residentes.
+3. Crear un residente completando nombre, apellido, DNI, email, telefono, lote y
+   direccion.
+4. Confirmar el alta.
+5. Revisar que el residente aparece en la tabla.
+6. Cerrar la app y volver a abrirla.
+7. Iniciar sesion con el email del residente y clave inicial igual al DNI.
+
+Resultado esperado: el residente queda guardado en `datos.json` y su cuenta queda
+guardada en `usuarios.json`.
+
+## Escenario 3: modificar residente
+
+Pasos:
+
+1. Iniciar sesion como administrador.
+2. Seleccionar un residente.
+3. Presionar Editar.
+4. Cambiar telefono, email, lote o direccion.
+5. Guardar.
+6. Cerrar y reabrir la aplicacion.
+
+Resultado esperado: los cambios se mantienen y, si cambia el email, tambien se actualiza
+la cuenta de inicio de sesion asociada.
+
+## Escenario 4: visitantes y proveedores
+
+Pasos:
+
+1. Iniciar sesion como administrador o residente.
+2. Entrar en Accesos y visitantes o Mis visitantes.
+3. Crear una persona autorizada.
+4. Elegir tipo `Visitante` o `Proveedor`.
+5. Elegir frecuencia `Unica vez`, `Semanal` o `Mensual`.
+6. Dejar patente vacia para validar que es opcional.
+7. Filtrar por Todos, Visitantes y Proveedores.
+
+Resultado esperado: la persona aparece en la tabla correcta, se filtra por tipo y queda
+persistida.
+
+## Escenario 5: ingreso y egreso
+
+Pasos:
+
+1. Ir a Accesos y visitantes.
+2. Seleccionar o registrar un visitante/proveedor.
+3. Registrar ingreso.
+4. Verificar fecha y hora de ingreso.
+5. Seleccionar el acceso activo.
+6. Registrar egreso.
+7. Verificar fecha y hora de egreso.
+
+Resultado esperado: no se permite duplicar un ingreso activo para el mismo DNI y el
+acceso pasa de Activo a Finalizado.
+
+## Escenario 6: ciclo de vida de reclamo
+
+Comando:
+
+```bash
+java -cp out model.solicitud.test.TestReclamo
+```
 
 Resultado esperado:
 
@@ -33,54 +111,54 @@ Resultado esperado:
 - En proceso -> Resuelto.
 - Resuelto -> Cerrado.
 - Cerrado no permite avanzar.
+- Una solicitud pendiente puede cancelarse y pasar a Cerrado.
 
-Comando sugerido:
+Evidencia obtenida:
 
-```powershell
-java -cp out model.solicitud.test.TestReclamo
+```text
+La solicitud pasa de 'Pendiente' a 'Asignado'.
+La solicitud pasa de 'Asignado' a 'En proceso'.
+La solicitud pasa de 'En proceso' a 'Resuelto'.
+La solicitud pasa de 'Resuelto' a 'Cerrado'.
+El estado de la solicitud no puede avanzar: ya fue cerrado.
+La solicitud que se encontraba pendiente de asignación ha sido directamente cerrada.
+La solicitud ya esta cerrada y no se puede cancelar.
 ```
 
-## Escenario 3: cancelacion de solicitud
+## Escenario 7: prueba integral automatizada
 
-1. Crear una solicitud nueva.
-2. Cancelarla desde Pendiente o Asignado.
+Comando:
 
-Resultado esperado: la solicitud pasa a Cerrado.
-
-## Escenario 4: control de acceso
-
-1. Registrar un acceso de visitante.
-2. Consultar si esta activo.
-3. Registrar egreso.
-
-Resultado esperado: el acceso queda con fecha de ingreso y fecha de egreso.
-
-## Escenario 5: prueba integral automatizable
-
-1. Ejecutar `model.solicitud.test.EscenariosEjecucion`.
-2. Validar altas de barrio, vivienda, residente y visitante.
-3. Validar ingreso y egreso.
-4. Validar ciclo de vida de reclamo.
-5. Validar cancelacion de tarea.
-6. Validar busqueda de solicitud por ID.
-
-Resultado esperado: la consola muestra `Todos los escenarios de ejecucion finalizaron correctamente.`
-
-Comando sugerido:
-
-```powershell
+```bash
 java -cp out model.solicitud.test.EscenariosEjecucion
 ```
 
-## Escenario 6: interfaz JavaFX
+Valida:
 
-1. Ejecutar `app.MainApp` con JavaFX configurado.
-2. Verificar el dashboard inicial con metricas y tablas.
-3. Ir a Residentes y crear un residente.
-4. Seleccionar un residente y registrar un visitante.
-5. Seleccionar un visitante y registrar un acceso.
-6. Seleccionar un acceso y registrar egreso.
-7. Crear un reclamo, una tarea y un incidente.
-8. Avanzar o cancelar una solicitud seleccionada.
+- Alta de barrio, vivienda, residente y visitante.
+- Registro de ingreso y egreso.
+- Creacion y avance completo de reclamo.
+- Creacion y cancelacion de tarea de mantenimiento.
+- Busqueda de solicitud por ID.
 
-Resultado esperado: las tablas y metricas se actualizan en memoria sin reiniciar la app.
+Evidencia obtenida:
+
+```text
+Ingreso registrado para Camila Ruiz
+Egreso registrado para Camila Ruiz
+Reclamo creado: Reclamo [1] Luminaria rota
+Tarea de mantenimiento creada: TareaMantenimiento [2] Cortar pasto
+Todos los escenarios de ejecucion finalizaron correctamente.
+```
+
+## Escenario 8: validaciones de datos
+
+Pasos:
+
+1. Intentar crear residente con email sin `@`.
+2. Intentar crear residente con telefono demasiado corto.
+3. Intentar crear visitante con DNI no numerico.
+4. Intentar crear visitante con patente demasiado larga.
+
+Resultado esperado: la aplicacion no guarda el registro y muestra mensajes claros para
+corregir los datos.
